--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "flush-promises": "^1.0.2",
     "vue": "^2.6.11",
+    "vue-collage": "^0.1.6",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
