--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "core-js": "^3.6.5",
     "flush-promises": "^1.0.2",
     "identity-obj-proxy": "^3.0.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-collage": "^0.1.6",
     "vue-router": "^3.2.0",
-    "vue-select": "^3.11.2"
+    "vue-select": "^3.11.2",
+    "vue-table-component": "^1.9.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
